{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 43,
  "lineage": "b9d828d2-73f4-05d5-5885-abfb60710a36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:loadbalancer/app/test-lb-tf/6c7dabee1533ec37",
            "arn_suffix": "app/test-lb-tf/6c7dabee1533ec37",
            "dns_name": "test-lb-tf-1699510941.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:774858124849:loadbalancer/app/test-lb-tf/6c7dabee1533ec37",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-09fc601bc351ab2b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e27590add5df3134"
              },
              {
                "subnet_id": "subnet-0f11758efca941585"
              }
            ],
            "subnets": [
              "subnet-0e27590add5df3134",
              "subnet-0f11758efca941585"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0486e4e025c225ece",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:listener/app/test-lb-tf/6c7dabee1533ec37/bc6fed4836b2aae6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:targetgroup/tf-example-lb-tg/5890ee40335cd368",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:774858124849:listener/app/test-lb-tf/6c7dabee1533ec37/bc6fed4836b2aae6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:loadbalancer/app/test-lb-tf/6c7dabee1533ec37",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:listener/app/test-lb-tf/6c7dabee1533ec37/25b1947e58206cc1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:targetgroup/tf-example-lb-tg-1/e1ec8f07b478af9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:774858124849:listener/app/test-lb-tf/6c7dabee1533ec37/25b1947e58206cc1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:loadbalancer/app/test-lb-tf/6c7dabee1533ec37",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:targetgroup/tf-example-lb-tg/5890ee40335cd368",
            "arn_suffix": "targetgroup/tf-example-lb-tg/5890ee40335cd368",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:774858124849:targetgroup/tf-example-lb-tg/5890ee40335cd368",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0486e4e025c225ece"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:774858124849:targetgroup/tf-example-lb-tg-1/e1ec8f07b478af9d",
            "arn_suffix": "targetgroup/tf-example-lb-tg-1/e1ec8f07b478af9d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:774858124849:targetgroup/tf-example-lb-tg-1/e1ec8f07b478af9d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg-1",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0486e4e025c225ece"
          }
        }
      ]
    }
  ]
}